--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
         <div class="section-break"></div>
 
         <div class="input-fields">
-            <div class="mb-4">Price: <input type="number" id="price" class="border p-2" /></div>
+            <!-- <div class="mb-4">Price: <input type="number" id="price" class="border p-2" /></div> -->
             <div class="mb-4">Currency: 
                 <select id="currency" class="border p-2">
                     <option value="USD">USD</option>
                     <option value="CAD">CAD</option>
                 </select>
             </div>
+            <div class="mb-4">Price: <input type="number" id="price" class="border p-2" /></div>
+
             <div class="mb-4">Shipping fee to warehouse (USD/CAD): <input type="number" id="shippingFee" class="border p-2" /></div>
         </div>
 
