--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         <div class="input-fields">
             <div class="mb-4">Weight (kg): <input type="number" id="weight" class="border p-2" /></div>
             <div class="mb-4">Profit margin (%): <input type="number" id="profitMargin" class="border p-2" /></div>
+            <div class="mb-4">Ad cost (VND): <input type="number" id="adCost" class="border p-2" /></div>
+            <div class="mb-4">Content (post bai) cost (VND): <input type="number" id="contentCost" class="border p-2" /></div>
         </div>
 
         <div class="calculated-fields mt-8">
@@ -117,6 +119,8 @@
             const shippingRateUsd = 9.5;
             const shippingRateCad = 16;
             const currency = document.getElementById('currency').value;
+            const adCost = parseFloat(document.getElementById('adCost').value) || 0;
+            const contentCost = parseFloat(document.getElementById('contentCost').value) || 0;
             
             const shipToVn = weight * (currency === 'USD' ? shippingRateUsd : shippingRateCad) * exchangeRate;
             document.getElementById('shipToVn').value = financial(shipToVn);
@@ -132,7 +136,7 @@
 
             document.getElementById('phuThu').value = financial(phuThu);
 
-            const totalCogs = (finalCheckoutPrice * exchangeRate) + phuThu + shipToVn; // Ensure finalCheckoutPrice is converted to VND
+            const totalCogs = (finalCheckoutPrice * exchangeRate) + phuThu + shipToVn + adCost + contentCost; // Ensure finalCheckoutPrice is converted to VND
             document.getElementById('totalCogs').value = financial(totalCogs);
 
             updateProfitAndFinalQuote(totalCogs);
@@ -170,6 +174,9 @@
         document.getElementById('shippingFee').addEventListener('input', updateTaxAndCheckout);
         document.getElementById('weight').addEventListener('input', updateTaxAndCheckout);
         document.getElementById('profitMargin').addEventListener('input',updateProfitAndFinalQuote);
+        document.getElementById('adCost').addEventListener('input', updateTaxAndCheckout);
+        document.getElementById('contentCost').addEventListener('input', updateTaxAndCheckout);
+
 
         function clearFields() {
         // Clear input fields
