--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
         document.getElementById('shippingFee').value = '';
         document.getElementById('weight').value = '';
         document.getElementById('profitMargin').value = '';
+        document.getElementById('adCost').value = '';
+        document.getElementById('contentCost').value = '';
+
 
         // Clear calculated fields
         document.getElementById('tax').value = '';
