--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container mx-auto">
         <div class="exchange-rates mb-8">
             <div class="mb-4">USD / VND: <input type="text" id="usdToVndRate" class="border p-2" value="25700" readonly /></div>
-            <div class="mb-4">CAD / VND: <input type="text" id="cadToVndRate" class="border p-2" value="18200" readonly /></div>
+            <div class="mb-4">CAD / VND: <input type="text" id="cadToVndRate" class="border p-2" value="18500" readonly /></div>
         </div>
         <div class="section-break"></div>
 
@@ -62,8 +62,8 @@
         <div class="input-fields">
             <div class="mb-4">Weight (kg): <input type="number" id="weight" class="border p-2" /></div>
             <div class="mb-4">Profit margin (%): <input type="number" id="profitMargin" class="border p-2" /></div>
-            <div class="mb-4">Ad cost (VND): <input type="number" id="adCost" class="border p-2" /></div>
-            <div class="mb-4">Content (post bai) cost (VND): <input type="number" id="contentCost" class="border p-2" /></div>
+            <div class="mb-4">Ad cost (VND): <input type="number" id="adCost" class="border p-2" value="200000" readonly/></div>
+            <div class="mb-4">Content (post bai) cost (VND): <input type="number" id="contentCost" class="border p-2" value="30000" readonly/></div>
         </div>
 
         <div class="calculated-fields mt-8">
